add options to select

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <span>Eesti avaandmed</span>
     </div>
     <div class="container">
-        <h3 class="table-heading"></h3>
-        <select name="open-data" id="open-data">
-            // Genereerime optionsid
-        </select>
+        <div class="inner-container">
+            <h3 class="table-heading"></h3>
+            <select name="open-data" id="open-data">
+                // Genereerime optionsid
+            </select>
+        </div>
     </div>
     <script src="./app.js" type="module"></script>
 </body>
